force-app/main/default/objects/Audit_Team_Member__c/Audit_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Audit Team Member</label>
    <nameField>
        <displayFormat>ATM-{00000000}</displayFormat>
        <label>Audit Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>