force-app/main/default/objects/Audit_Team_Member__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <label>Audit #</label>
    <referenceTo>BMX_Quality_Audit__c</referenceTo>
    <relationshipLabel>Audit Team Members</relationshipLabel>
    <relationshipName>Audit_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>