force-app/main/default/objects/Audit_Team_Member__c/fields/Non_TWD_Participant__c.field-meta.xml
<CustomField>
    <fullName>Non_TWD_Participant__c</fullName>
    <label>Non-TWD Participant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>