force-app/main/default/objects/Audit_Team_Member__c/fields/Quality_Audit__c.field-meta.xml
<CustomField>
    <fullName>Quality_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Audit</label>
    <referenceTo>BMX_Quality_Audit__c</referenceTo>
    <relationshipLabel>Audit Team Members (Quality Audit)</relationshipLabel>
    <relationshipName>Audit_Team_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>