force-app/main/default/objects/Audit_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Auditor</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
            <value>
                <fullName>Technical Expert</fullName>
            </value>
            <value>
                <fullName>Auditor in Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>