force-app/main/default/objects/Audit_Team_Member__c/validationRules/FilterMemberValues.validationRule-meta.xml
<ValidationRule>
    <fullName>FilterMemberValues</fullName>
    <active>false</active>
    <errorConditionFormula>IF(OR(INCLUDES(Member__r.TWD_Role__c, &quot;Audit Coordinator&quot;),INCLUDES(Member__r.TWD_Role__c, &quot;Audit Coordinator&quot;),Member__c=&apos;&apos;),false,true)</errorConditionFormula>
    <errorDisplayField>Member__c</errorDisplayField>
    <errorMessage>Member should be user with TWD role = Audit Coordinator” or “Audit Participant”.</errorMessage>
</ValidationRule>