force-app/main/default/objects/Audit_Team_Member__c/validationRules/Limit_users_can_be_named.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_users_can_be_named</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 ISPICKVAL(Role__c,&apos;Auditor&apos;),
NOT(
OR(
INCLUDES(Member__r.TWD_Role__c, &apos;Audit Coordinator&apos;),
INCLUDES(Member__r.TWD_Role__c, &apos;Audit Participant&apos;)
)
)
)</errorConditionFormula>
    <errorMessage>TWD-Participant must have TWD role &quot;Audit Participant&quot; or “Audit Coordinator”</errorMessage>
</ValidationRule>